--- a/website/src/theme/BlogPostItem/styles.module.css
+++ b/website/src/theme/BlogPostItem/styles.module.css
@@ -7,10 +7,34 @@
 
 .blogPostTitle {
   font-size: 1rem;
+  height:30px;
+  margin:0;
 }
+
+@media(max-width: 580px){
+  .blogPostTitle {
+    font-size: 1rem;
+    height:60px;
+    margin:0;
+  }
+}
+@media(max-width: 1850px){
+  .blogPostTitle {
+    font-size: 1rem;
+    height:50px;
+    margin:0;
+  }
+}
+
 
 .blogPostData {
   font-size: 0.9rem;
+  
+}
+
+.readingTime {
+  margin-left:-6px;
+  margin-top:-5px
 }
 
 .blogPostDetailsFull {
@@ -27,15 +51,17 @@
 }
 
 .tag {
-  margin: 0 15px 0.5rem -10px;
+  margin: 0 12px 0.5rem -10px;
   display: inline-block;
+  margin-top:-5px
 }
 
 .authorTimeTags {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     color: rgb(28, 30, 33);
     display:flex;
     margin-left: 2px
+    
    
 }
 
@@ -44,18 +70,20 @@
     text-decoration-color: rgb(28, 30, 33);
 }
 .authorsList {
-  font-size:0.7rem;
+  font-size:0.8rem;
   white-space: nowrap;
+  text-align:justify;
+  color: rgb(28, 30, 33);
+  margin-left:-10px;
+  margin-top:-10px;
+  margin-right:10px
   
 }
 
 @media(max-width: 1150px){
-  .authorsList{
-    font-size: 0.65rem;
-    
-  }
+ 
   .authorTimeTags{
-    font-size: 0.6rem;
+    font-size: 0.65rem;
     white-space: nowrap;
   }
 }
@@ -66,6 +94,23 @@
     white-space: nowrap;
     margin-left:-15px
     
+  }
+}
+
+@media(max-width:1500px){
+  .authorsList {
+    font-size:0.7rem;
+    white-space: nowrap;
+    text-align:justify;
+    color: rgb(28, 30, 33);
+    margin-left:-10px;
+    margin-top:-10px;
+   
+    
+  }
+  .authorTimeTags{
+    font-size: 0.7rem;
+    white-space: nowrap;
   }
 }
 
